Changes on site

--- a/index.html
+++ b/index.html
@@ -101,15 +101,24 @@
                 {
                     width:80%; /*Changes Percentage of Bar Width*/
                 }
+                .instagram
+                {
+                    color: black;
+                }
+                .instagram:visited
+                {
+                    color: black;
+                }                
             }
         </style>	
-        <!--Title of Page--><title>Coming Soon</title>
+        <!--Title of Page--><title>Meu Mundo Mágico</title>
     </head>	
     <body>
         <div id="main"> <!--Start Page Container-->
             <img src="logo.png" alt=""> <!--Logo-->
-            <h1>Company Name</h1>
-            <h2>Our website is currently under construction. </h2>
+            <h1>Meu Mundo Mágico</h1>
+            <h2>Em breve, nosso novo cantinho!</h2>
+            <h2>Enquanto isto, acesse nosso <a class="instagram" href="https://www.instagram.com/meumundomagicomg" target="_blank">Instagram<a>.</h2>
             <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>
         </div> <!--End Page Container-->
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css' property='stylesheet'> <!--Define Google Fonts-->
